5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1593_1804.log
== TEST (2019-03-22 13:39:27) 
-- CODE:
cXA=
cYA=
cXB=
cYB=
from math import*
dAB=sqrt(((cXB-cXA)**2)+((cYB-cYA)**2))

print(dAB)
-- ERROR:
File "XXXX", line 1
    cXA=
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 13:41:39) 
-- CODE:
cXA=int(input("valor de xa:"))
cYA=int(input("valor de ya:"))
cXB=int9input("valor de xb:")
cYB=int(input("valor de yb:"))
from math import*
dAB=sqrt(((cXB-cXA)**2)+((cYB-cYA)**2))

print(dAB)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cXB=int9input()
NameError: name 'int9input' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 13:41:59) 
-- CODE:
cXA=int(input("valor de xa:"))
cYA=int(input("valor de ya:"))
cXB=int(input("valor de xb:")
cYB=int(input("valor de yb:"))
from math import*
dAB=sqrt(((cXB-cXA)**2)+((cYB-cYA)**2))

print(dAB)
-- ERROR:
File "XXXX", line 4
    cYB=int(input())
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 13:42:09) 
-- CODE:
cXA=int(input("valor de xa:"))
cYA=int(input("valor de ya:"))
cXB=int(input("valor de xb:"))
cYB=int(input("valor de yb:"))
from math import*
dAB=sqrt(((cXB-cXA)**2)+((cYB-cYA)**2))

print(dAB)
-- OUTPUT:
30.479501308256342
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-22 13:43:19) 
-- CODE:
cXA=float(input("valor de xa:"))
cYA=float(input("valor de ya:"))
cXB=float(input("valor de xb:"))
cYB=float(input("valor de yb:"))
from math import*
dAB=sqrt(((cXB-cXA)**2)+((cYB-cYA)**2))

print(round(dAB,3))
-- OUTPUT:
30.48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-22 13:43:26) 
-- CODE:
cXA=float(input("valor de xa:"))
cYA=float(input("valor de ya:"))
cXB=float(input("valor de xb:"))
cYB=float(input("valor de yb:"))
from math import*
dAB=sqrt(((cXB-cXA)**2)+((cYB-cYA)**2))

print(round(dAB,3))
-- EXECUTION TIME:
0.16469
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 22:34:40) 
-- CODE:
cXA=float(input("valor de xa:"))
cYA=float(input("valor de ya:"))
cXB=float(input("valor de xb:"))
cYB=float(input("valor de yb:"))
from math import*
dAB=sqrt(((cXB-cXA)**2)+((cYB-cYA)**2))

print(round(dAB,3))
-- EXECUTION TIME:
0.157297
-- TEST CASE 1:
---- input:
50
25
30
48
---- correct output:
30.48
---- user output:
30.48
-- TEST CASE 2:
---- input:
2.5
3.0
5.0
1.8
---- correct output:
2.773
---- user output:
2.773
-- TEST CASE 3:
---- input:
1.22
2.33
3.44
4.55
---- correct output:
3.14
---- user output:
3.14
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
